--- a/.github/workflows/osv-scanner-pr.yml
+++ b/.github/workflows/osv-scanner-pr.yml
@@ -2,6 +2,8 @@ name: OSV-Scanner PR Scan
 
 # Change "main" to your default branch if you use a different name, i.e. "master"
 on:
+  push:
+    branches: [main]
   pull_request:
     branches: [main]
   merge_group:
